<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinnerFilter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:prompt="@string/filter_by_specialty" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/doctor_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:autofillHints="postalAddress"
        android:hint="@string/address"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#546E7A" />

    <Spinner
        android:id="@+id/spinnerSpecialty"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_doctor" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_doctor" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete_doctor" />

    <Button
        android:id="@+id/btnToSpecialty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/go_to_specialty" />

    <ListView
        android:id="@+id/listViewDoctors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

</LinearLayout>
